  [Michele Simionato]
  * Fixed shakemap calculations to take the risk IMTs and not the hazard IMTs
  * Extended shakemap2gmfs to amplify the GMFs based on user-provided vs30
    values
  * Removed sorting of the sections in the multiFaultSource reader to keep
    the rup_idxs consistent with the order in the files
  * GMFs too small to produce losses now give a warning rather than an error
  * Fixed bug in `get_ry0_distance` breaking conditioned GMFs
  * Made sure lon and lat are rounded to 5 digits in the site collection

  [Graeme Wheaterill]
  * Fixes to bchydro_2016_epistemic, eshm20_craton and lanzano_2019

  [Michele Simionato]
  * Extended sensitity analysis to file parameters
  * Introduced new loss type `residents`

  [Marco Pagani]
  * Fixed bug in get_profiles_from_simple_fault_data affecting KiteSurfaces

  [Michele Simionato]
  * Fixed the rupture exporter in presence of GMPETables
  * Optimized the postclassical phase
  * Fixed a serious issue in the classical calculator with tiles
  * Vectorized the association assets <-> hazard sites (up to 32x speedup)
  * Fixed bug in disaggregation calculations associated to an error
    in the line `[mag] = np.unique(np.round(ctx.mag, 6))`
  * Optimized the calculation of geohashes by using numba

  [Paolo Tormene]
  * Extended total_losses to include business_interruption

  [Michele Simionato]
  * Recognized `occupants_avg` field in the exposure
  * Optimized reading the exposure (both speed and memory)
  * Optimized the rupture sampling for MultiFaultSources and improved
    the parallelization for MultiFaultSources and MultiPointSources
  * Made the parameter `truncation_level` mandatory
  * Fixed the damage state header in the aggrisk outputs
  * Changed the order of the IMTs to be by period and not lexicographic
  * Fixed the realizations extractor for scenario calculations reading
    ruptures with multiple different tectonic region types

  [Kendra Johnson]